--- a/css/output.css
+++ b/css/output.css
@@ -28,6 +28,9 @@ body {
   line-height: 1.5;
   color: #333;
   min-height: 100vh;
+  background-color: #C5E4E7;
+  display: grid;
+  place-items: center;
 }
 
 a {
