--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@ $orange: #E17052;
 $green-200: #9FE8DF;
 $green-400: #26C2AE;
 $green-750: #0D686D;
-$greeen-800: #085C61;
+$green-800: #085C61;
 $green-900: #00474B;
 $grey-50: #F3F9FA;
 $grey-200: #C5E4E7;
@@ -16,6 +16,7 @@ $grey-600: #3D6666;
 $black: #000;
 
 // spacing
+$s-50: .25rem;  // 4px
 $s-100: .5rem;  // 8px
 $s-200: 1rem;   // 16px
 $s-300: 1.5rem; // 24px
