--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -22,12 +22,12 @@ ol,
 ul {
   margin: 0;
   padding: 0;
+  font-weight: bold;
 }
 
 // set base font styles
  body {
   font-family: "Space Mono", monospace;
-  font-weight: bold;
   font-size: 16px;
   line-height: 1.5;
   color: #333;
@@ -36,6 +36,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: .2s all ease-in-out;
  }
 
  // reset links and lists
@@ -57,9 +58,15 @@ ul {
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
+   font-weight: inherit;
    border: none;
    outline: none;
    background: transparent;
+ }
+
+ ::placeholder {
+   color: $grey-300;;
+   opacity: 1; // Override Firefox's default opacity
  }
 
  // make images and videos responsive
