--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -11,6 +11,10 @@ h1{
     font-weight: bold;
   }
 
+    @media only screen and (width >=1024px) {
+      max-width: 50%;
+    }
+
   .input-icon-container{
     width: 100%;
     background: $grey-50;
@@ -42,6 +46,10 @@ h1{
       grid-template-columns: repeat(2, 1fr);
       gap: $s-200;
 
+      @media only screen and (width >= 768px){
+        grid-template-columns: repeat(3, 1fr);
+      }
+
       button{
         color: $white;
         background-color: $green-900;
@@ -71,7 +79,68 @@ h1{
       }
     }
   }
+
+  .people-container{
+    .label-error-container{
+      display: flex;
+      flex-direction: column;
+
+      .error-message{
+        color: $orange;
+        font-weight: bold;
+        display: none; 
+      }
+    }
+  }
 }
+
+.output-container{
+  background: $green-900;
+  padding: $s-300;
+  border-radius: $s-200;
+
+  @media only screen and (width >=1024px) {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+  .output-row{
+    color: $white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: $s-300;
+
+    .per-person{
+      font-size: $fs-100;
+      color: $grey-400;
+    }
+
+    .output-value{
+      font-size: clamp($fs-400, 6.5vw, $fs-500);
+      color: $green-400;
+    }
+  }
+
+  button{
+    width: 100%;
+    background-color: $green-400;
+    color: $green-900;
+    font-size: $fs-200;
+    padding-block: $s-100;
+    border-radius: $s-50;
+    text-transform: uppercase;
+    font-weight: bold;
+
+    &:hover{
+      background-color: $green-200;
+      cursor: pointer;
+    }
+  }
+}
+
 .container{
   background-color: $white;
   max-width: 375px;
@@ -89,5 +158,7 @@ h1{
   @media only screen and (width >= 1024px) {
     max-width: 920px;
     padding: $s-400;
+    flex-direction: row;
+    gap: $s-600;
   }
 }
