--- a/css/output.css
+++ b/css/output.css
@@ -129,6 +129,10 @@ h1 {
   background-color: #085C61;
   cursor: pointer;
 }
+.input-container .tip-container .tip-buttons-container button.active {
+  background-color: #9FE8DF;
+  color: #00474B;
+}
 .input-container .tip-container .tip-buttons-container input {
   text-align: center;
   background: #F3F9FA;
@@ -193,6 +197,11 @@ h1 {
 .output-container button:hover {
   background-color: #9FE8DF;
   cursor: pointer;
+}
+.output-container button:disabled {
+  background-color: #0D686D;
+  color: #085C61;
+  cursor: not-allowed;
 }
 
 .container {
